--- a/html/computationsjs.html
+++ b/html/computationsjs.html
@@ -8,7 +8,7 @@
         import { data } from '../html/js/data.js'
     </script> -->
     <script src="../html/js/computations.js"></script>
-
+    <script src="../html/js/dfs.js"></script>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
 
     <button class="button" onclick="doSort()">Merge sort million records</button>
     <button class="button" onclick="multiply()">Multiply matrix</button>
-    <button class="button">Computation benchmark</button>
+    <button class="button" onclick="searchDfs()">Depth First search</button>
     <button class="button">Conclusion</button>
 </body>
 
