Js netwokring completed

--- a/html/computationsjs.html
+++ b/html/computationsjs.html
@@ -9,6 +9,7 @@
     </script> -->
     <script src="../html/js/computations.js"></script>
     <script src="../html/js/dfs.js"></script>
+    <script src="../html/js/prims_mst.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
     <button class="button" onclick="doSort()">Merge sort million records</button>
     <button class="button" onclick="multiply()">Multiply matrix</button>
     <button class="button" onclick="searchDfs()">Depth First search</button>
-    <button class="button">Conclusion</button>
+    <!-- <button class="button" onclick="mst()">Minimal spanning tree</button> -->
 </body>
 
 </html>
