--- a/html/tablejs.html
+++ b/html/tablejs.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>JavaScript benchmark</h1>
-    <button class="button" onclick="addRows()">Add 10000 row</button>
+    <button class="button" onclick="addRows()">Add 10000 rows</button>
     <button class="button" onclick="increaseAge()" style="background-color: blue;">Update age</button>
     <button class="button"  onclick="clearEvenRows()"  style="background-color: orange;">Delete all even rows</button>
     <button class="button" onclick="clearTable()" style="background-color: red;">Clear rows</button>
