--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
 <h1>JavaScript benchmark</h1>
    <button class="button" onclick="window.open('html/tablejs.html')">Dom manipulation benchmark</button>
+   <button class="button" onclick="window.open('html/networkingjs.html')">Networking benchmark</button>
+   <button class="button" onclick="window.open('html/computationsjs.html')">Computation benchmark</button>
+   <button class="button">Conclusion</button>
+   <h1>PyScript benchmark</h1>
+   <button class="button" onclick="window.open('html/tablejs.html')">Dom manipulation benchmark</button>
    <button class="button">Networking benchmark</button>
    <button class="button" onclick="window.open('html/computationsjs.html')">Computation benchmark</button>
    <button class="button">Conclusion</button>
