--- a/html/tablepy.html
+++ b/html/tablepy.html
@@ -4,12 +4,16 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/tablecss.css">
+    <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" /> -->
+    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
     <script src="../html/js/table.js"></script>
+    <py-script src="../html/py/table.py"> </py-script>
+
 </head>
 
 <body>
     <h1>PyScript benchmark</h1>
-    <button class="button" onclick="addRows()">Add 10000 rows</button>
+    <button class="button" id="addrows_btn" pys-onClick="addrowspy">Add 10000 rows</button>
     <button class="button" onclick="increaseAge()" style="background-color: blue;">Update age</button>
     <button class="button"  onclick="clearEvenRows()"  style="background-color: orange;">Delete all even rows</button>
     <button class="button" onclick="clearTable()" style="background-color: red;">Clear rows</button>
