--- a/html/tablepy.html
+++ b/html/tablepy.html
@@ -14,9 +14,9 @@
 <body>
     <h1>PyScript benchmark</h1>
     <button class="button" id="addrows_btn" pys-onClick="addrowspy">Add 10000 rows</button>
-    <button class="button" onclick="increaseAge()" style="background-color: blue;">Update age</button>
-    <button class="button"  onclick="clearEvenRows()"  style="background-color: orange;">Delete all even rows</button>
-    <button class="button" onclick="clearTable()" style="background-color: red;">Clear rows</button>
+    <button class="button"  id="increase_btn" pys-onclick="increaseAge"  style="background-color: blue;">Update age</button>
+    <button class="button" id="clear_even_rows" pys-onclick="clearEvenRows" style="background-color: orange;">Delete even rows rows</button>
+    <button class="button" id="clear_btn" pys-onClick="clearTable" style="background-color: red;">Clear rows</button>
     <br>
     <table id="myTable">
         <thead>
@@ -27,11 +27,11 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <!-- <tr>
                 <td>1</td>
                 <td>Pavan</td>
                 <td>25</td>
-            </tr>
+            </tr> -->
         </tbody>
     </table>
 </body>
