get 100 records python completed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <button class="button">Conclusion</button>
    <h1>PyScript benchmark</h1>
    <button class="button" onclick="window.open('html/tablepy.html')">Dom manipulation benchmark</button>
-   <button class="button" onclick="window.open('html/networkingjs.html')">Networking benchmark</button>
+   <button class="button" onclick="window.open('html/networkpy.html')">Networking benchmark</button>
    <button class="button" onclick="window.open('html/computationsjs.html')">Computation benchmark</button>
    <button class="button">Conclusion</button>
 </body>
