--- a/html/computationsjs.html
+++ b/html/computationsjs.html
@@ -9,17 +9,16 @@
     </script> -->
     <script src="../html/js/computations.js"></script>
     <script src="../html/js/dfs.js"></script>
-    <script src="../html/js/prims_mst.js"></script>
 </head>
 
 <body>
     <h1>JavaScript computation benchmark</h1>
-    <!-- <input id="fileInput" type="file" size="50" onchange="processFiles(this.files)"> -->
 
     <button class="button" onclick="doSort()">Merge sort million records</button>
     <button class="button" onclick="multiply()">Multiply matrix</button>
     <button class="button" onclick="searchDfs()">Depth First search</button>
-    <!-- <button class="button" onclick="mst()">Minimal spanning tree</button> -->
+    <button class="button" onclick="hash()">Polynomial hash</button>
+    <button class="button" onclick="heapSortData()">Heap sort</button>
 </body>
 
 </html>
