--- a/html/computationspy.html
+++ b/html/computationspy.html
@@ -10,12 +10,11 @@
 <body>
     <h1>PyScript computation benchmark</h1>
     <py-script>
-import json
+<!-- import json
 from js import console
 from pyodide.http import open_url
 # GET
 start = time.time()
-print(start)
 data = json.loads(open_url("https://raw.githubusercontent.com/kevinOcconer/million/main/million.json").read())
 def mergeSort(arr):
     if len(arr) > 1:
@@ -59,11 +58,32 @@ def mergeSort(arr):
             k += 1
 print("merge sort started")
 mid = time.time()
-print(mid - start)
 mergeSort(data)
 end = time.time()
 print(end-mid)
-print("completed")             
+print("completed")        -->
+
+
+
+m1 = [[1,2],[3,4]]
+m2 = [[5,6],[7,8]]
+
+result = []
+for i in range(2):
+   row = []
+   for j in range(2):
+      row.append(0)
+   result.append(row)
+print("Matrix Multiplication:")
+mid = time.time()
+end = time.time()
+for i in range(2):
+   for j in range(2):
+      for k in range(2):
+         result[i][j] += m1[i][k] * m2[k][j]
+end = time.time()
+print(end-mid)
+
     </py-script>
 </body>
 
