polynomial hash added pyscript

--- a/html/computationspy.html
+++ b/html/computationspy.html
@@ -63,9 +63,9 @@ end = time.time()
 print(end-mid)
 print("completed")        -->
 
+<!-- matrix Multiplication -->
 
-
-m1 = [[1,2],[3,4]]
+<!-- m1 = [[1,2],[3,4]]
 m2 = [[5,6],[7,8]]
 
 result = []
@@ -76,13 +76,103 @@ for i in range(2):
    result.append(row)
 print("Matrix Multiplication:")
 mid = time.time()
-end = time.time()
 for i in range(2):
    for j in range(2):
       for k in range(2):
          result[i][j] += m1[i][k] * m2[k][j]
 end = time.time()
+print(end-mid) -->
+
+<!-- DFS -->
+
+<!-- '''Python program to print DFS traversal for complete graph'''
+from collections import defaultdict
+ 
+# this class represents a directed graph using adjacency list representation
+ 
+ 
+class Graph:
+    # Constructor
+    def __init__(self):
+        # default dictionary to store graph
+        self.graph = defaultdict(list)
+ 
+    # Function to add an edge to graph
+    def addEdge(self, u, v):
+        self.graph[u].append(v)
+    # A function used by DFS
+ 
+    def DFSUtil(self, v, visited):
+        # Mark the current node as visited and print it
+        visited.add(v)
+        print(v,end=" ")
+ 
+        # recur for all the vertices adjacent to this vertex
+        for neighbour in self.graph[v]:
+            if neighbour not in visited:
+                self.DFSUtil(neighbour, visited)
+        # The function to do DFS traversal. It uses recursive DFSUtil
+ 
+    def DFS(self):
+        # create a set to store all visited vertices
+        visited = set()
+        # call the recursive helper function to print DFS traversal starting from all
+        # vertices one by one
+        for vertex in self.graph:
+            if vertex not in visited:
+                self.DFSUtil(vertex, visited)
+# Driver code
+# create a graph given in the above diagram
+ 
+print("Following is Depth First Traversal \n")
+g = Graph()
+g.addEdge(0, 1)
+g.addEdge(0, 2)
+g.addEdge(1, 2)
+g.addEdge(2, 0)
+g.addEdge(2, 3)
+g.addEdge(3, 3)
+print("DFS")
+mid = time.time()
+g.DFS()
+end = time.time()
+print(end-mid) -->
+
+<!-- Polynomial hash -->
+
+
+class Hash:
+    def __init__(self, s: str):
+        self.p1, self.m1 = 31, 10**9 + 7
+        self.p2, self.m2 = 37, 10**9 + 9
+        self.hash1, self.hash2 = 0, 0
+        self.compute_hashes(s)
+    def compute_hashes(self, s: str):
+        pow1, pow2 = 1, 1
+        hash1, hash2 = 0, 0
+        for ch in s:
+            seed = 1 + ord(ch) - ord('a')
+            hash1 = (hash1 + seed * pow1) % self.m1
+            hash2 = (hash2 + seed * pow2) % self.m2
+            pow1 = (pow1 * self.p1) % self.m1
+            pow2 = (pow2 * self.p2) % self.m2
+        self.hash1, self.hash2 = hash1, hash2
+
+def __eq__(self, other):
+    return self.hash1 == other.hash1 and self.hash2 == other.hash2
+
+def __str__(self):
+    return f'({self.hash1}, {self.hash2})'
+
+if __name__ == '__main__':
+    s = "geeksforgeeks"
+
+print("Hash")
+mid = time.time()
+hash = Hash(s)
+end = time.time()
 print(end-mid)
+
 
     </py-script>
 </body>
