--- a/html/computationspy.html
+++ b/html/computationspy.html
@@ -10,12 +10,14 @@
 <body>
     <h1>PyScript computation benchmark</h1>
     <py-script>
-<!-- import json
+ import json
 from js import console
 from pyodide.http import open_url
+
 # GET
 start = time.time()
 data = json.loads(open_url("https://raw.githubusercontent.com/kevinOcconer/million/main/million.json").read())
+
 def mergeSort(arr):
     if len(arr) > 1:
  
@@ -56,7 +58,7 @@ def mergeSort(arr):
             arr[k] = R[j]
             j += 1
             k += 1
-print("merge sort started")
+print("Merge sort")
 mid = time.time()
 mergeSort(data)
 end = time.time()
@@ -65,7 +67,7 @@ print("completed")        -->
 
 <!-- matrix Multiplication -->
 
-<!-- m1 = [[1,2],[3,4]]
+m1 = [[1,2],[3,4]]
 m2 = [[5,6],[7,8]]
 
 result = []
@@ -81,14 +83,11 @@ for i in range(2):
       for k in range(2):
          result[i][j] += m1[i][k] * m2[k][j]
 end = time.time()
-print(end-mid) -->
+print(end-mid)
 
 <!-- DFS -->
 
-<!-- '''Python program to print DFS traversal for complete graph'''
-from collections import defaultdict
- 
-# this class represents a directed graph using adjacency list representation
+ # this class represents a directed graph using adjacency list representation
  
  
 class Graph:
@@ -136,7 +135,7 @@ print("DFS")
 mid = time.time()
 g.DFS()
 end = time.time()
-print(end-mid) -->
+print(end-mid) 
 
 <!-- Polynomial hash -->
 
@@ -172,6 +171,62 @@ mid = time.time()
 hash = Hash(s)
 end = time.time()
 print(end-mid)
+
+
+<!-- Heap sort -->
+
+# Python program for implementation of heap Sort
+ 
+# To heapify subtree rooted at index i.
+# n is size of heap
+ 
+ 
+def heapify(arr, N, i):
+    largest = i  # Initialize largest as root
+    l = 2 * i + 1     # left = 2*i + 1
+    r = 2 * i + 2     # right = 2*i + 2
+ 
+    # See if left child of root exists and is
+    # greater than root
+    if l < N and arr[largest] < arr[l]:
+        largest = l
+ 
+    # See if right child of root exists and is
+    # greater than root
+    if r < N and arr[largest] < arr[r]:
+        largest = r
+ 
+    # Change root, if needed
+    if largest != i:
+        arr[i], arr[largest] = arr[largest], arr[i]  # swap
+ 
+        # Heapify the root.
+        heapify(arr, N, largest)
+ 
+# The main function to sort an array of given size
+ 
+ 
+def heapSort(arr):
+    N = len(arr)
+ 
+    # Build a maxheap.
+    for i in range(N//2 - 1, -1, -1):
+        heapify(arr, N, i)
+ 
+    # One by one extract elements
+    for i in range(N-1, 0, -1):
+        arr[i], arr[0] = arr[0], arr[i]  # swap
+        heapify(arr, i, 0)
+ 
+ 
+# Driver's code
+if __name__ == '__main__':
+    print("Heap Sort")
+    mid = time.time()
+    hash = heapSort(data)
+    end = time.time()
+    print(end-mid)
+
 
     </py-script>
 </body>
